<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">InControl</string>
    <string name="action_settings">Settings</string>
    <string name="def_status_msg">Status Message</string>
    <string name="def_update_time">Update Time</string>
    <string name="def_sensor_name">Sensor Name</string>
    <string name="def_device_name">Device Name</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_control_center">InControl Centers</string>
    <string name="action_control_center_add">Add</string>
    <string name="text_empty_centers">No InControl centers defined.\nPlease use Edit->Add.</string>
    <string name="text_hint_controller_id">InControl Controller ID</string>
    <string name="text_hint_controller_name">Custom Controller Name</string>
    <string name="text_hint_user_credentials">Credentials shown on screen</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_title_add_new_center">Add a new Controller</string>
    <string name="button_ok">OK</string>
    <string name="current_value">Current Value:</string>
    <string name="toast_error_loading_sensors">Error loading sensors!</string>
    <string name="def_device_id">Device ID</string>
    <string name="menu_set_trigger">Set Trigger</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_view_history">View History</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="text_loading">Refreshing…</string>
    <string name="dialog_title_edit_controller">Edit Controller</string>
    <string name="dialog_title_rename_sensor">Rename sensor</string>
    <string name="title_activity_sensor_history">Sensor History</string>
    <string name="toast_error_loading_history">Error loading sensor history!</string>
    <string name="toast_error_renaming_sensor">Error uploading new name. Change will be kept local.</string>
    <string name="title_history_of">History of </string>
    <string name="title_activity_trigger">Trigger</string>
    <string name="title_trigger_of">Trigger of </string>
    <string name="when">When value </string>
    <string name="comma">,</string>
    <string name="menu_add_trigger">Add Trigger</string>
    <string name="toast_error_upload_trigger">Trigger setting upload failed!</string>
    <string name="menu_add_action">Add Action</string>
    <string name="menu_add_condition">Add Condition</string>

</resources>
