<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="20dp"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_control_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:hint="@string/text_hint_controller_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_control_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:hint="@string/text_hint_controller_name" />

    <EditText
        android:id="@+id/et_control_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:hint="@string/text_hint_user_credentials" />
</LinearLayout>
