<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/device_info_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="14dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="14dp">

        <ImageView
            android:id="@+id/sensor_pic"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/sensor_pic"
            android:layout_toRightOf="@+id/sensor_pic"
            android:text="@string/def_sensor_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_main_text" />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/sensor_name"
            android:layout_marginLeft="12dp"
            android:layout_toEndOf="@id/sensor_name"
            android:layout_toRightOf="@id/sensor_name"
            android:text="@string/def_device_name"
            android:textColor="@android:color/tertiary_text_dark" />

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sensor_pic"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/def_status_msg"
            android:textColor="@android:color/tertiary_text_dark" />

        <TextView
            android:id="@+id/update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/def_update_time"
            android:textColor="@android:color/tertiary_text_dark" />

        <ImageButton
            android:id="@+id/sensor_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:src="@drawable/overflow_card"
            android:tint="@android:color/tertiary_text_light" />

        <TextView
            android:id="@+id/tv_sensor_id_invisible"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />
    </RelativeLayout>
</android.support.v7.widget.CardView>